Update app: Snort v0.1.8 (#533)

--- a/snort/umbrel-app.yml
+++ b/snort/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: snort
 category: Social
 name: Snort
-version: "v0.1.7"
+version: "v0.1.8"
 tagline: Fast Nostr UI
 description: >-
   Snort is a client for Nostr that is built using React, designed to be fast and lightweight while still offering a wide range of features. 
@@ -11,49 +11,48 @@ description: >-
 releaseNotes: >-
   ## Added
 
-  * Per event zap targets by @v0l
+  * Tamil Language support
 
-  * Content warning (NIP-36) support by @v0l
+  * Quoted notes are rendered embedded
 
-  * Polls (NIP-69) by @v0l
+  * Multi-account support for subscribers 
 
-  * Snort subscriptions by @v0l
+  * Zapper key loading processing in background to speed up profile loading
 
-  * NIP-94 File header support by @v0l
+  * Export keys page added to settings
 
-  * Link previews by @ghobs91 & @v0l
+  * NIP-94 support for rendering quoted file metadata events
 
-  * Cmd+Enter to post note by @v0l
+  * Interactions cache (zaps/likes/reports) for better UX
 
-  * `nostr:` links (NIP-27) by @v0l
+  * Full screen image/video previews in modal
 
-  * Tending users on Search page by @ghobs91 & @v0l 
+  * Re-broadcast own events dialog
+
+  * Nostr wallet connect support
+
+  * Cashu token parsing preview with redeem link 
+
+  * Trending notes/people tabs added to search page
 
 
   ## Changed
+  
+  * Profile page loads only 200 latest notes, improving profile load times for accounts with less activity 
 
-  * Paste image upload by @vivganes
-
-  * Note creator note preview by @v0l 
-
-  * Login private key input masking by @vivganes
+  * New user flow has been tweaked to be shorter with NIP5 & Twitter import steps removed
 
 
   ## Fixed
-
-  * Fix note creator closing on thread when new replies load by @SamSamskies
-
-  * Follow hashtag tab highlighting by @SamSamskies
-
-  * Language dropdown defaults to Arabic by @vivganes
-
-  * Bookmarks showing reactions by @vivganes
-
-  * Single zapper on note only shows name by @vivganes
-
-  * Broken link previews show empty box by @vivganes
   
-  * Render jfif images by @v0l 
+  * Thread navigation without page reload
+
+  * NIP-42 functionality restored
+  
+  * `a` tagged kind 1 replies render properly under root event
+  
+
+  **Full Changelog**: https://github.com/v0l/snort/compare/v0.1.7...v0.1.8
 developer: Snort
 website: https://snort.social
 dependencies: []
