--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lightning-terminal
 category: Lightning Node Management
 name: Lightning Terminal
-version: "0.9.2-alpha"
+version: "0.10.0-alpha"
 tagline: The easiest way to manage channel liquidity
 description: >-
   Lightning Terminal is the easiest way to manage inbound and
@@ -50,15 +50,16 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  This release of Lightning Terminal (LiT) includes an LND version bump 
-  that addresses a few performance issues.
+  This release of Lightning Terminal (LiT) packages the new Taproot Assets
+  Daemon! Currently this will only be available when running LiT in testnet (or
+  regtest/simnet) mode.
   
-
-  We'll be continuously working to improve the user experience based on 
+  
+  We'll be continuously working to improve the user experience based on
   feedback from the community.
   
   
-  This release packages LND v0.16.2-beta, Loop v0.23.0-beta, Pool v0.6.2-beta, 
-  and Faraday v0.2.11-alpha.
+  This release packages LND v0.16.2-beta, Taproot Assets Daemon v0.2.0-alpha,
+  Loop v0.23.0-beta, Pool v0.6.2-beta and Faraday v0.2.11-alpha.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/348
