add browser refresh warning to release notes

--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -34,6 +34,12 @@ description: >-
   You can join other cool Robots and get community support at https://t.me/robosats telegram group.
   
 releaseNotes: >-
+  ⚠️ You may see a warning message after updating the app, informing you that an update is still required.
+  This is a known issue and can be ignored. To prevent the message from appearing every time you open the app,
+  clear your browser cache by pressing Ctrl+Shift+R (Cmd+Shift+R on Mac) while on the app page or selecting the
+  third option in the pop-up.
+
+
   - New authentication method for robots (you must update!)
 
   - Added possibility to revert fiat sent
