tweak release notes wording

--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -35,7 +35,7 @@ description: >-
   
 releaseNotes: >-
   ⚠️ You may see a warning message after updating the app, informing you that an update is still required.
-  This is a known issue and can be ignored. To prevent the message from appearing every time you open the app,
+  This is a known issue and can be safely disregarded. To prevent the message from appearing every time you open the app,
   clear your browser cache by pressing Ctrl+Shift+R (Cmd+Shift+R on Mac) while on the app page or selecting the
   third option in the pop-up.
 
