udpate release notes

--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -31,15 +31,15 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  This release updates Ghostfolio from 1.241.0 to 1.269.0.
+  This version contains a crucial update to address the inability to add new securities, an issue that arose from a recent change to Yahoo Finance.
   A full list of new features, improvements, and bug fixes
   for versions between 1.241.0 and 1.269.0 can be found here: https://github.com/ghostfolio/ghostfolio/releases.
-    
+
+
   Version 1.269.0 release notes:
 
   - Added FINANCIAL_MODELING_PREP as a new data source type
   - Improved the market price on the first buy date in the chart of the position detail dialog
   - Restructured the admin control panel with a new settings tab
-
 submitter: BeauAgst
 submission: https://github.com/getumbrel/umbrel-apps/pull/396
