Updated Urbit to v2.6

--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "v2.5"
+version: "v2.6"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -35,9 +35,8 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  This vere release fixes a memory leak in the packet forwarding flow of
-  Ames. It also fixes a remote scry runtime cache bug and a remote scry
-  packet deserialization issue.
+  This vere release fixes an issue where accessing a previously removed
+  Eyre et-response in-memory cache path would cause a ship to crash.
 
 
-  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.5
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.6
