--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -2,51 +2,50 @@ manifestVersion: 1.1
 id: core-lightning
 category: Finance
 name: Core Lightning
-version: "22.11.1"
+version: "22.11.1-ui"
 tagline: Run your personal Core Lightning node
 description: >-
   Get started with the Lightning network today with Core Lightning - a
   Lightning Network implementation focusing on spec compliance and performance.
+
 
   The Lightning Network allows ultra cheap and almost instant Bitcoin transactions.
   By running a Lightning node, you can not only self-custody your Bitcoin on
   Lightning, but also earn sats by routing payments on the network.
 
 
-  Connect Zeus or any other wallet that supports Core Lightning's REST interface
-  to remotely manage and access your node from anywhere.
+  Core Lightning and Application powered by Blockstream.
 
-
-  Powered by Core Lightning from Elements.
-
-
-  An official app from Umbrel.
-developer: Umbrel
-website: https://umbrel.com
+developer: Core Lightning
+website: https://blockstream.com/lightning/
 dependencies:
   - bitcoin
-repo: https://github.com/getumbrel/umbrel-core-lightning
-support: https://community.getumbrel.com/c/bitcoin-and-lightning
+repo: https://github.com/ElementsProject/cln-application
+support: https://community.corelightning.org/home
 port: 2103
 gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
-  - 4.jpg
 path: ""
 defaultPassword: ""
-submitter: Umbrel
-submission: https://github.com/getumbrel/umbrel-apps/pull/7
+submitter: Core Lightning
+submission: https://github.com/getumbrel/umbrel-apps/pull/475
 releaseNotes: >-
-  - We reintroduced a number of deprecated features, since some integrations had missed the deprecation window, and asked for some more time to update their apps
+  - This update brings a stunning new look and intuitive UI, maintained officially by Blockstream
 
-  - The new experimental reckless plugin manager can be used to download, install and uninstall plugins on the fly. We have many new features planned for it, so stay tuned.
+  - Core Lightning node control with Commando RPC calls, lnmessage, websocket-port & runes
 
-  - When receiving a keysend any extra TLV fields will be stored so they can be retrieved later.
+  - Database upgrade support with database-update flag
 
-  - The --database-update=false flag allows users wanting to test unreleased versions from accidentally upgrading the database, and then be unable to switch to a released version again.
+  - Offers and fetchinvoice plugins enabled through experimental-offers
 
-  - Several performance issues, particularly for larger nodes, have been addressed
+  - Application Features:
+      * Smooth withdrawals and deposits
+      * Simple opening and closing of channels
+      * Effortless sending and receiving of invoices
+      * Convenient management of offers (bolt12)
+      * Seamless keysend functionality
+      * And much more...
 
-
-  And much more. Full changelog from v0.11.1 can be found here: https://github.com/ElementsProject/lightning/releases
+  Click here for full changelog: https://github.com/ElementsProject/lightning/releases/tag/v22.11.1
