--- a/sphinx-relay/umbrel-app.yml
+++ b/sphinx-relay/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: sphinx-relay
 category: Social
 name: Sphinx Relay
-version: "2.3.1"
+version: "2.3.2"
 tagline: Chat and pay over the Lightning Network
 description: >-
   Sphinx Relay turns your Lightning node into a personal
@@ -33,23 +33,8 @@ submitter: Stakwork
 submission: https://github.com/getumbrel/umbrel/pull/341
 releaseNotes: >-
 
-  - Feat/sentiment bot by @tobi-bams in #633
-  - simplify loadLightning func by @Evanfeenstra in #634
-  - Update/sentiment bot by @tobi-bams in #635
-  - feat: cache stack test by @tobi-bams in #636
-  - Feat/cache integration by @tobi-bams in #639
-  - try fix proxy sub err by @Evanfeenstra in #646
-  - Feat: messages deleter by @tobi-bams in #642
-  - update: add sleep for 10000ms by @tobi-bams in #651
-  - fix: fixing bot message profile picture by @tobi-bams in #652
-  - Feat/javis bot by @tobi-bams in #650
-  - Fix/crash by @tobi-bams in #655
-  - Fix/payment error handling by @tobi-bams in #657
-  - fix grpc ts type generator by @antonilol in #663
-  - CLN native getinfo with generated types by @Evanfeenstra in #664
-  - clearer configs for cln, merge gl and cln cert setup, test cln info by @Evanfeenstra in #665
-  - less strict type guards lnd/proxy/cln by @Evanfeenstra in #670
-  - try catch around massPingHubFromProxies by @Evanfeenstra in #671
-  - whenever check isLND also add or isProxy by @Evanfeenstra in #672
+This release updates Sphinx Relay from version 2.2.13 to 2.3.2.
 
-  Full changelog can be found here: https://github.com/stakwork/sphinx-relay/compare/v2.3.0...v2.3.1
+Full release notes and detailed information is available at https://github.com/stakwork/sphinx-relay/releases
+
+  Full changelog can be found here: https://github.com/stakwork/sphinx-relay/compare/v2.3.0...v2.3.2
