--- a/oak-node/umbrel-app.yml
+++ b/oak-node/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: oak-node
 category: Finance
 name: Oak Node
-version: "0.3.5"
+version: "0.3.6"
 tagline: Do more with your LND node
 description: >-
   Oak Node gives you Scheduled Sends. Use it to schedule recurring tips to LNURL or Lightning Addresses. 
@@ -10,10 +10,9 @@ description: >-
 
   For Nostriches out there, the included Nostr bot gives you control over your sats from any Nostr client.
 releaseNotes: >-
-  The Nostr bot now has a Shadowy LN Tips feature. Once it's set up, you can use any Nostr client to trigger an LN tip to anyone by just liking one of their notes.
-  
-  
-  This update also brings NIP-65 support for more reliable pairing, auto-reconnects to relays when necessary, npub support and more.
+  Ever wanted a fancier Nostr pubkey, but didn't want to mine it yourself?
+  Oak now has a PowPub Client, which lets you buy the mining of vanity pubkeys from mining providers.
+  It uses a split-key approach, so the keys are known only to you.
 developer: Carlos
 website: https://oak-node.net
 dependencies:
