Updating cln-app from v0.0.2 to v0.0.3

--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: core-lightning
 category: Finance
 name: Core Lightning
-version: "22.11.1-ui"
+version: "22.11.1-ui0.0.3"
 tagline: Run your personal Core Lightning node
 description: >-
   Get started with the Lightning network today with Core Lightning - a
