Updated release notes

--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -34,18 +34,17 @@ submission: https://github.com/getumbrel/umbrel-apps/pull/475
 releaseNotes: >-
   - This update brings a stunning new look and intuitive UI, maintained officially by Blockstream
 
-  - Core Lightning node control with Commando RPC calls, lnmessage, websocket-port & runes
+  - It includes two bug fixes:
+    * Invalid rune error thrown on some slower machines.
 
-  - Database upgrade support with database-update flag
+    * Undefined msat fields shown as NaN will be 0.
 
-  - Offers and fetchinvoice plugins enabled through experimental-offers
 
-  - Application Features:
-      * Smooth withdrawals and deposits
-      * Simple opening and closing of channels
-      * Effortless sending and receiving of invoices
-      * Convenient management of offers (bolt12)
-      * Seamless keysend functionality
-      * And much more...
+  - This version also includes some enhanced features such as:
+    * Updates for CLN v23.05 msat migration
+
+    * Add Offers list view
+    
+    * Add Tor option for lnmessage on connect wallet
 
   Click here for full changelog: https://github.com/ElementsProject/lightning/releases/tag/v22.11.1
