--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -32,19 +32,23 @@ defaultPassword: ""
 submitter: Blockstream
 submission: https://github.com/getumbrel/umbrel-apps/pull/475
 releaseNotes: >-
-  - This update brings a stunning new look and intuitive UI, maintained officially by Blockstream
+  This update brings a stunning new look and intuitive UI, maintained officially by Blockstream
+  
+  
+  It includes two bug fixes:
 
-  - It includes two bug fixes:
-    * Invalid rune error thrown on some slower machines.
+  - Invalid rune error thrown on some slower machines.
+  
+  - Undefined msat fields shown as NaN will be 0.
 
-    * Undefined msat fields shown as NaN will be 0.
+
+  This version also includes some enhanced features such as:
+  
+  - Updates for CLN v23.05 msat migration
+  
+  - Add Offers list view
+  
+  - Add Tor option for lnmessage on connect wallet
 
 
-  - This version also includes some enhanced features such as:
-    * Updates for CLN v23.05 msat migration
-
-    * Add Offers list view
-    
-    * Add Tor option for lnmessage on connect wallet
-
-  Click here for full changelog: https://github.com/ElementsProject/lightning/releases/tag/v22.11.1
+  Full release notes are available at: https://github.com/ElementsProject/lightning/releases/tag/v22.11.1
