Update Core Lightning - cln-app from v0.0.2 to v0.0.3 (#542)

--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: core-lightning
 category: Finance
 name: Core Lightning
-version: "22.11.1-ui"
+version: "22.11.1-ui0.0.3"
 tagline: Run your personal Core Lightning node
 description: >-
   Get started with the Lightning network today with Core Lightning - a
@@ -32,20 +32,23 @@ defaultPassword: ""
 submitter: Blockstream
 submission: https://github.com/getumbrel/umbrel-apps/pull/475
 releaseNotes: >-
-  - This update brings a stunning new look and intuitive UI, maintained officially by Blockstream
+  This update brings a stunning new look and intuitive UI, maintained officially by Blockstream
+  
+  
+  It includes two bug fixes:
 
-  - Core Lightning node control with Commando RPC calls, lnmessage, websocket-port & runes
+  - Invalid rune error thrown on some slower machines.
+  
+  - Undefined msat fields shown as NaN will be 0.
 
-  - Database upgrade support with database-update flag
 
-  - Offers and fetchinvoice plugins enabled through experimental-offers
+  This version also includes some enhanced features such as:
+  
+  - Updates for CLN v23.05 msat migration
+  
+  - Add Offers list view
+  
+  - Add Tor option for lnmessage on connect wallet
 
-  - Application Features:
-      * Smooth withdrawals and deposits
-      * Simple opening and closing of channels
-      * Effortless sending and receiving of invoices
-      * Convenient management of offers (bolt12)
-      * Seamless keysend functionality
-      * And much more...
 
-  Click here for full changelog: https://github.com/ElementsProject/lightning/releases/tag/v22.11.1
+  Full release notes are available at: https://github.com/ElementsProject/lightning/releases/tag/v22.11.1
