--- a/nutstash-wallet/umbrel-app.yml
+++ b/nutstash-wallet/umbrel-app.yml
@@ -2,18 +2,21 @@ manifestVersion: 1
 id: nutstash-wallet
 category: Finance
 name: Nutstash Wallet
-version: "0.1.10"
+version: "0.1.12"
 tagline: Nutstash is a Cashu wallet for your browser.
 description: >- 
   What is Cashu?
 
   "Cashu is a free and open-source Chaumian ecash system built for Bitcoin. Cashu offers near-perfect privacy for users of custodial Bitcoin applications. Nobody needs to knows who you are, how much funds you have, and with whom you transact with." - cashu.space
-
-
+  
+  Nutstash is a simple Cashu wallet. It lets you add trusted mints, where you can mint ecash tokens. These tokens can then be sent peer to peer with any messenger app, or directly with the built in nostr nip-04 client. The ecash can then be redeemed at the issuing mint for sats on the Lightning network. 
+  
   This app is in early development and most likely buggy. It does handle real sats though, so be sure to use only amounts that are small enough to lose.
   
 releaseNotes: >-
-  - Initial release on the umbrel app store
+  - Backup tokens to Umbrel
+  - Automatic mint key updates
+  - Bugfix: not enough funds when not using coin selection
   
 developer: gandlafbtc
 website: https://nutstash.app/
