Update Torq to v0.22.1
Torq can now we used with CLN! It is still an experimental version

Bug fixes and improvements

Tested on real Rasberry PI

--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: torq
 category: Lightning Node Management
 name: Torq
-version: "v0.20.3"
+version: "v0.22.1"
 tagline: Capital management for routing nodes on the lightning network
 description: >-
   Operating a routing node requires managing capital efficiently. If you look past the technical challenges, what you are trying to do is stack sats and support the network by routing liquidity. No matter your motivation, efficiently managing your capital is essential.
@@ -49,10 +49,32 @@ gallery:
   - 4.jpg
   - 5.jpg
 releaseNotes: >-
-  New peers page, bugs and performance enhancements.
+  Torq can now we used with CLN! It is still an experimental version, so expect some issues. Here are some known limitations:
+  
+  
+  - CLN v023.05 is required for CLN nodes added to Torq.
 
-  Database migrations might take some time on first start up.
+  - For very large nodes it might be problematic to import all payments, invoices and forwards, since CLN does not provide any way of paginating requests.
 
+  - Rebalancing is currently disabled to CLN nodes as pathfinding is not complete.
+  
+  
+  Other changes:
+  
+  
+  - Function to move funds between nodes (for multiple nodes).
+
+  - Tables containing node specific data, like the channels table, now has a color code. This can be chosen in the node settings.
+
+  - Peers Table improved.
+
+  - Nodes can be added from the dashboard.
+
+  - Improved adding and removing tags.
+  
+  - Forwards table is much faster.
+
+  - Chart configurations are now remembered.
 path: ""
 defaultUsername: ""
 deterministicPassword: false
