Updating Nitter to Latest
Changed tag from ceramicwhite from 8 months ago in dockerhub to https://hub.docker.com/r/zedeus/nitter/tags

Without update Nitter is currently broken with "rate instance is limited" error message

this looks like the official tag from developer Zedeus who is also helpful in their Matrix channel: https://matrix.to/#/#nitter:matrix.org

Web UI for Matrix and link: https://app.element.io/#/room/#nitter:snopyta.org/$yuy1_I3Mn9D9q02RMtn7FikVIQIKE818cyowKYHxGSQ

--- a/nitter/docker-compose.yml
+++ b/nitter/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: "2023.05.20"
 
 services:
   app_proxy:
@@ -9,7 +9,7 @@ services:
   web:
     # Official Nim image used as base image for nitter doesn't offer Arm variant so using a custom image w/ patch for umbrel
     # https://github.com/ceramicwhite/umbrel-patch-ci/blob/master/nitter/umbrel.patch
-    image: ceramicwhite/nitter:build-20220908@sha256:cfb1227aca5014804c47d10d7ff77f24416a3fd571549eaeee9850f915507447
+    image: zedeus/nitter:latest@sha256:2172275e119f39e5e2e4d554bf1bd70feae70ac872818ede2c1d566e601678ae
     restart: on-failure
     stop_grace_period: 1m
     init: true
