--- a/nitter/umbrel-app.yml
+++ b/nitter/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: nitter
 category: Social
 name: Nitter
-version: "20220908"
+version: "2023.05.20"
 tagline: Browse Twitter without tracking or ads
 description: >
   Nitter is a free and open source alternative Twitter front-end focused on privacy and performance.
