--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -4,19 +4,16 @@ services:
   app_proxy:
     environment:
       APP_HOST: qbittorrent_server_1
-      APP_PORT: 8094
+      APP_PORT: 8080
       PROXY_AUTH_ADD: "false"
 
   server:
-    image: linuxserver/qbittorrent:4.5.2@sha256:cdaafa308ed8362e937ade724a9e83da92f08716e5c83a421e097dfbed2b2633
+    image: hotio/qbittorrent:release-4.5.2@sha256:43b975dc4f44c6bd9ff8a63e86b1878d5a0b3b39fa3168aab8d81b7455e79adc
     environment:
       - PUID=1000
       - PGID=1000
-      - WEBUI_PORT=8094
+      # - UMASK=002
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
       - ${UMBREL_ROOT}/data/storage/downloads:/downloads
-    ports:
-      - 6881:6881
-      - 6881:6881/udp
     restart: on-failure
