--- a/qbittorrent/umbrel-app.yml
+++ b/qbittorrent/umbrel-app.yml
@@ -5,13 +5,11 @@ name: qBittorrent
 version: "4.5.2"
 tagline: Free and reliable P2P Bittorrent client
 description: >-
-  The qBittorrent project aims to provide an open-source software alternative to µTorrent.
-  
+  qBittorrent is an open-source software alternative to µTorrent.
 
-  Additionally, qBittorrent runs and provides the same features on all major platforms (FreeBSD, Linux, macOS, OS/2, Windows).
   
-
-  Bittorrent is based on the Qt toolkit and libtorrent-rasterbar library.
+  This app comes bundled with VueTorrent, a sleek user interface that provides an alternative to qBittorrent's default interface.
+  To enable VueTorrent, simply navigate to tools --> options --> Web UI and select "Use alternative Web UI".
   
 
   ⚠️ qBittorrent downloads torrents over the Clearnet, not Tor.
