--- a/qbittorrent/umbrel-app.yml
+++ b/qbittorrent/umbrel-app.yml
@@ -5,7 +5,7 @@ name: qBittorrent
 version: "4.5.2"
 tagline: Free and reliable P2P Bittorrent client
 description: >-
-  qBittorrent is an open-source software alternative to µTorrent.
+  qBittorrent is an open-source software alternative to µTorrent. It's designed to meet the needs of most users while using as little CPU and memory as possible.
 
   
   This app comes bundled with VueTorrent, a sleek user interface that provides an alternative to qBittorrent's default interface.
