--- a/adguard/umbrel-app.yml
+++ b/adguard/umbrel-app.yml
@@ -5,8 +5,9 @@ name: AdGuard Home
 version: "0.107.29"
 tagline: Privacy protection center for you and your devices
 description: >-
-  AdGuard Home is a network-wide software for blocking ads & tracking across all your home devices. With the rise of Internet-Of-Things and connected devices, it becomes
-  more and more important to be able to control your whole network.
+  AdGuard Home is a comprehensive solution designed to block ads and tracking across all devices in your home network. As the world increasingly embraces the Internet of Things,
+  with a growing number of connected devices, maintaining control over your entire network is crucial. AdGuard Home empowers you to manage this with ease, ensuring a secure and
+  clutter-free browsing experience for every device under your roof.
 developer: AdGuard
 website: https://adguard.com/
 dependencies: []
