--- a/adguard/docker-compose.yml
+++ b/adguard/docker-compose.yml
@@ -17,9 +17,9 @@ services:
       - 53:53/tcp
       - 53:53/udp
     # DHCP Server
-      - 67:67/udp
-      - 68:68/tcp
-      - 68:68/udp
+      # - 67:67/udp
+      # - 68:68/tcp
+      # - 68:68/udp
     # DNS-over-HTTPS
       # - 443:443/tcp
       # - 443:443/udp
