--- a/penpot/umbrel-app.yml
+++ b/penpot/umbrel-app.yml
@@ -5,8 +5,9 @@ name: Penpot
 version: "1.18.3"
 tagline: Design and prototyping platform
 description: >-
-  Penpot is the first Open Source design and prototyping platform for product teams. Non dependent on operating systems,
-  Penpot is web based and works with open standards (SVG). Penpot invites designers all over the world to fall in love with open source
+  Penpot is a pioneering open-source platform for design and prototyping, tailored specifically for product teams.
+  Unconstrained by operating systems, Penpot utilizes the flexibility of web-based platforms and the interoperability
+  of open standards, specifically SVG. Penpot invites designers all over the world to fall in love with open source
   while getting developers excited about the design process in return.
 releaseNotes: ""
 developer: Penpot
