--- a/chatpad-ai/umbrel-app.yml
+++ b/chatpad-ai/umbrel-app.yml
@@ -9,7 +9,7 @@ description: >-
   Chatpad AI is an alternative user interface for OpenAI's chat models. Simply add your OpenAI API key and you're ready to go!
 
 
-  No tracking, no cookies, no bullshit. All your data is stored locally within your browser. You can export and import conversations to safeguard against data loss.
+  No tracking. No cookies. All your data is stored locally within your browser, and you can export and import conversations to safeguard against data loss.
 developer: Andrei Canta
 website: https://github.com/deiucanta/chatpad
 dependencies: []
