add additional description

--- a/overseerr/umbrel-app.yml
+++ b/overseerr/umbrel-app.yml
@@ -8,6 +8,10 @@ description: >-
   Overseerr is a request management and media discovery tool built to work with your existing Plex ecosystem.
 
 
+  Overseerr scans your Plex libraries at regular intervals, so it knows which items are already available on your server.
+  It also integrates with the popular DVR applications Radarr and Sonarr, and supports activity monitoring within Overseerr itself.
+
+
   🛠️ SET-UP INSTRUCTIONS
 
   During initial set-up, you will need to input your Umbrel device's IP address to connect to Plex (and optional services such as Radarr and Sonarr).
