--- a/bazarr/umbrel-app.yml
+++ b/bazarr/umbrel-app.yml
@@ -8,7 +8,14 @@ description: >-
   Bazarr is a companion application to Sonarr and Radarr that manages and downloads subtitles based on your requirements.
   You define your preferences by TV show or movie and Bazarr takes care of everything for you.
 
+
   Bazarr does not scan your disk to detect series and movies. It only takes care of the series and movies that are indexed in Sonarr and Radarr.
+
+
+  🛠️ SET-UP INSTRUCTIONS
+  During initial set-up, you will need to input your Umbrel device's IP address to connect to Sonarr and/or Radarr.
+  You can find your device's IP address by visiting your router's admin dashboard or by using an IP scanning tool like Angry IP Scanner.
+  You will also need to input your API key for Sonarr and/or Radarr. You can find your API keys in the settings of the Sonarr and Radarr apps.
 developer: morpheus65535
 website: https://www.bazarr.media/
 dependencies: []
