Set --prune-blockchain for monero-node app as a default option

--- a/monero-node/docker-compose.yml
+++ b/monero-node/docker-compose.yml
@@ -9,7 +9,7 @@ services:
   
   monerod:
     image: sethsimmons/simple-monerod:v0.18.2.2
-    command: "--rpc-restricted-bind-ip=0.0.0.0 --rpc-restricted-bind-port=18089 --public-node --no-igd --no-zmq --enable-dns-blocklist"
+    command: "--rpc-restricted-bind-ip=0.0.0.0 --rpc-restricted-bind-port=18089 --public-node --prune-blockchain --no-igd --no-zmq --enable-dns-blocklist"
     restart: unless-stopped
     stop_grace_period: 15m30s
     volumes:
