--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       APP_HOST: immich_proxy_1
       APP_PORT: 8080
-      PROXY_AUTH_WHITELIST: "/api/*"
+      PROXY_AUTH_WHITELIST: "/api/*,/search/*"
 
   server:
     image: altran1502/immich-server:v1.59.1@sha256:0f611b58423ae6f544da506ff55683b0f947856a0f0bd85db0e8e48aa2837347
