Updating Immich to 1.54.1 (#526)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -1,11 +1,14 @@
-manifestVersion: 1
+manifestVersion: 1.1
 id: immich
 category: Files
 name: Immich
-version: "v1.40.1_63-dev"
+version: "v1.60.0"
 tagline: High performance photo and video backup solution
 description: >-
   An open source and high performance self-hosted backup solution for the videos and photos on your mobile device
+
+  
+  ⚠️ Immich is under very active development. Expect bugs and changes. Do not use it as the only way to store your photos and videos!
 
   
   Features:
@@ -41,7 +44,32 @@ description: >-
   - LivePhoto backup and playback
   
   - User-defined storage structure
-releaseNotes: ""
+releaseNotes: >
+  This update brings an absolute ton of new features to Immich, including:
+
+  - Global map view
+
+  - Improved video transcoding 
+
+  - Partner sharing
+
+  - Facial recognition
+
+  - Logout all devices with a single click
+
+  - Add descriptions to assets and search using metadata syntax (m:<any-word-in-description>)
+
+  - Archive assets
+
+  - Typesense for better search
+
+  - Dedicated Favorites Page
+
+  - and more!
+
+
+  A full list of new features, improvements, and bug fixes
+  for versions between 1.40.1_63-dev and 1.60.0 can be found at https://github.com/immich-app/immich/releases
 developer: Alex Tran
 website: https://www.immich.app
 dependencies: []
