--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "v2.6"
+version: "v2.8"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -35,8 +35,10 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  This vere release fixes an issue where accessing a previously removed
-  Eyre et-response in-memory cache path would cause a ship to crash.
+  The previous release vere-v2.7 introduced a regression presenting as a significant disk read increase when swapping. This issue was caused by a flag meant only for development builds being set in the release build, causing every snapshot write to do an overly paranoid check on snapshot integrity.
 
 
-  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.6
+  We have now released vere-v2.8 to fix the issue.
+
+
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.8
