tweak release notes url

--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -57,7 +57,7 @@ releaseNotes: >-
   - Many other minor bug fixes and updates.
   
   
-  Full changelog can be found here: https://github.com/Reckless-Satoshi/robosats/compare/v0.4.0-alpha...v0.5.0-alpha
+  Full release notes are available at https://github.com/RoboSats/robosats/releases
 developer: RoboSats
 website: https://learn.robosats.com
 dependencies: []
