--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: robosats
 category: Finance
 name: RoboSats
-version: "v0.5.0-alpha"
+version: "v0.5.1-alpha"
 tagline: Simple and Private Bitcoin P2P Exchange
 description: >-
   RoboSats is a simple and private app to exchange bitcoin for national currencies. 
@@ -42,18 +42,22 @@ releaseNotes: >-
 
   - New authentication method for robots (you must update!)
 
-  - Added possibility to revert fiat sent
+  - The robosats client app is now lighter on your node. Both in your disk and in your ram. The app is now trimmed down to 7 MB versus 130MB of v0.5.0-alpha
+
+  - New shortcut to login into any of your robots. Just enter in your browser the URL umbrel.local:12596/robot/<your_robot_token>
+
+  - Fix LNproxy feature to wrap invoices for your privacy
+
+  - Fix chat to allow multiple lines of input
+
+  - Improved security: submitted invoices/address are now PGP signed (no possible MITM attacks)
 
   - New payment methods
-
-  - New trade summary, and preliminary Sats amounts before making / taking an order.
-
-  - New language: japanese
 
   - Many other minor bug fixes and updates.
   
   
-  Full changelog can be found here: https://github.com/Reckless-Satoshi/robosats/compare/v0.4.0-alpha...v0.5.0-alpha
+  Full release notes are available at https://github.com/RoboSats/robosats/releases
 developer: RoboSats
 website: https://learn.robosats.com
 dependencies: []
