indent releaseNotes for proper yaml format

--- a/trilium-notes/umbrel-app.yml
+++ b/trilium-notes/umbrel-app.yml
@@ -61,14 +61,14 @@ torOnly: false
 submitter: Pranshu Agrawal
 submission: https://github.com/getumbrel/umbrel-apps/pull/199
 releaseNotes: >-
-fix displaying error message in mermaid
-
-download offline images from libreoffice
-
-fix duplicating subtree with internal links
-
-don't update attribute detail while composing CJK characters
-
-fix click events propagating from context menu being closed
-
-Full release notes and detailed information is available at https://github.com/zadam/trilium/releases
+  - fix displaying error message in mermaid
+  
+  - download offline images from libreoffice
+  
+  - fix duplicating subtree with internal links
+  
+  - don't update attribute detail while composing CJK characters
+  
+  - fix click events propagating from context menu being closed
+  
+  - Full release notes and detailed information is available at https://github.com/zadam/trilium/releases
