tweak release notes

--- a/trilium-notes/umbrel-app.yml
+++ b/trilium-notes/umbrel-app.yml
@@ -61,6 +61,11 @@ torOnly: false
 submitter: Pranshu Agrawal
 submission: https://github.com/getumbrel/umbrel-apps/pull/199
 releaseNotes: >-
+  This update upgrades Trilium Notes from version 0.55.1 to 0.59.4.
+  
+  
+  Version 0.59.4 includes the following changes:
+
   - fix displaying error message in mermaid
   
   - download offline images from libreoffice
@@ -71,4 +76,5 @@ releaseNotes: >-
   
   - fix click events propagating from context menu being closed
   
-  - Full release notes and detailed information is available at https://github.com/zadam/trilium/releases
+  
+  Full release notes and detailed information for versions between 0.55.1 and 0.59.4 are available at https://github.com/zadam/trilium/releases
