--- a/trilium-notes/umbrel-app.yml
+++ b/trilium-notes/umbrel-app.yml
@@ -2,46 +2,46 @@ manifestVersion: 1
 id: trilium-notes
 category: Productivity
 name: Trilium Notes
-version: "0.55.1-build-2"
+version: "0.59.4"
 tagline: Build your personal knowledge base with Trilium Notes
 description: >-
   Features
 
 
   - Notes can be arranged into arbitrarily deep tree. Single note can be placed into multiple places in the tree (see cloning)
-  
+
   - Rich WYSIWYG note editing including e.g. tables, images and math with markdown autoformat
-  
+
   - Support for editing notes with source code, including syntax highlighting
-  
+
   - Fast and easy navigation between notes, full text search and note hoisting
-  
+
   - Seamless note versioning
-  
+
   - Note attributes can be used for note organization, querying and advanced scripting
-  
+
   - Synchronization with self-hosted sync server (there's a 3rd party service for hosting synchronisation server)
-  
+
   - Sharing (publishing) notes to public internet
-  
+
   - Strong note encryption with per-note granularity
-  
+
   - Sketching diagrams with bult-in Excalidraw (note type "canvas")
-  
+
   - Relation maps and link maps for visualizing notes and their relations
-  
+
   - Scripting - see Advanced showcases
-  
+
   - REST API for automation
-  
+
   - Scales well in both usability and performance upwards of 100 000 notes
-  
+
   - Touch optimized mobile frontend for smartphones and tablets
-  
+
   - Night theme
-  
+
   - Evernote and Markdown import & export
-  
+
   - Web Clipper for easy saving of web content
 developer: ZAdam
 website: https://github.com/zadam/trilium
@@ -60,3 +60,21 @@ defaultPassword: ""
 torOnly: false
 submitter: Pranshu Agrawal
 submission: https://github.com/getumbrel/umbrel-apps/pull/199
+releaseNotes: >-
+  This update upgrades Trilium Notes from version 0.55.1 to 0.59.4.
+  
+  
+  Version 0.59.4 includes the following changes:
+
+  - fix displaying error message in mermaid
+  
+  - download offline images from libreoffice
+  
+  - fix duplicating subtree with internal links
+  
+  - don't update attribute detail while composing CJK characters
+  
+  - fix click events propagating from context menu being closed
+  
+  
+  Full release notes and detailed information for versions between 0.55.1 and 0.59.4 are available at https://github.com/zadam/trilium/releases
