--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: lightning
 category: Finance
 name: Lightning Node
-version: "v0.16.2-beta"
+version: "v0.16.3-beta"
 tagline: Run your personal Lightning Network node
 description: >-
   Run your personal Lightning Network node, and join the future of Bitcoin today.
@@ -22,7 +22,7 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  This release updates LND from v0.15.5-beta to v0.16.2-beta, and also includes bug fixes for the Lightning Node application.
+  This release updates LND v0.16.3-beta, and also includes bug fixes for the Lightning Node application.
 
 
   Lightning Node application:
@@ -35,6 +35,10 @@ releaseNotes: >-
 
 
   LND:
+  
+  - new in v0.16.3-beta: Mempool Optimizations
+  
+  - new in v0.16.3-beta: Channel Link Bug Fix
 
   - Refined peer-to-peer behavior and BOLT spec compliance.
 
