This release updates LND to v0.16.3-beta

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -22,7 +22,7 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  This release updates LND v0.16.3-beta, and also includes bug fixes for the Lightning Node application.
+  This release updates LND to v0.16.3-beta
 
 
   Lightning Node application:
