--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lightning-terminal
 category: Lightning Node Management
 name: Lightning Terminal
-version: "0.10.0-alpha"
+version: "0.10.1-alpha"
 tagline: The easiest way to manage channel liquidity
 description: >-
   Lightning Terminal is the easiest way to manage inbound and
@@ -50,16 +50,15 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  This release of Lightning Terminal (LiT) packages the new Taproot Assets
-  Daemon! Currently this will only be available when running LiT in testnet (or
-  regtest/simnet) mode.
+  This release of Lightning Terminal (LiT) includes updates to the versions of
+  the integrated LND, Loop and Pool daemons, along with a few LiT bug fixes.
   
   
   We'll be continuously working to improve the user experience based on
   feedback from the community.
   
   
-  This release packages LND v0.16.2-beta, Taproot Assets Daemon v0.2.0-alpha,
-  Loop v0.23.0-beta, Pool v0.6.2-beta and Faraday v0.2.11-alpha.
+  This release packages LND v0.16.3-beta, Taproot Assets Daemon v0.2.0-alpha,
+  Loop v0.24.1-beta, Pool v0.6.4-beta and Faraday v0.2.11-alpha.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/348
