change volume bind mount to single directory

--- a/nutstash-wallet/docker-compose.yml
+++ b/nutstash-wallet/docker-compose.yml
@@ -12,7 +12,6 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-      - ${APP_DATA_DIR}/data/mints.json:/etc/nutstash/mints.json
-      - ${APP_DATA_DIR}/data/tokens.json:/etc/nutstash/tokens.json
+      - ${APP_DATA_DIR}/data/backup:/etc/nutstash
 
     
