--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -22,34 +22,10 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  This release updates LND from v0.16.2-beta to v0.16.3-beta, and also includes bug fixes for the Lightning Node application.
-
-
-  Lightning Node application:
-
-  - keysend payments are now displayed in the Lightning Wallet transactions list
-
-  - multiple externalip entries are allowed in lnd.conf
-
-  - handle breaking change in lnd.conf apriori parameters introduced in LND v0.16.0-beta
-
-
-  LND:
-
-  - Refined peer-to-peer behavior and BOLT spec compliance.
-
-  - Extended RPC functionality and wallet capabilities.
-
-  - Improved lncli features and pathfinding improvements.
-
-  - Streamlined watchtower session handling and address updates.
-
-  - Enhanced mempool scanning logic that no longer blocks startup.
-
-  - And more! 
+  This LND release contains only bug fixes and is intended to optimize the recently added mempool watching logic, and also fix several suspected inadvertent force close vectors.
   
   
-  For more detailed information on these LND updates, please refer to the full release notes available at https://github.com/lightningnetwork/lnd/releases
+  Read the full release notes for additional information and detailed changes at https://github.com/lightningnetwork/lnd/blob/master/docs/release-notes/release-notes-0.16.3.md
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
