--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -22,7 +22,7 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  This LND release contains only bug fixes and is intended to optimize the recently added mempool watching logic, and also fix several suspected inadvertent force close vectors.
+  This minor LND release contains bug fixes and is intended to optimize the recently added mempool watching logic, and also fix several suspected inadvertent force close vectors.
   
   
   Read the full release notes for additional information and detailed changes at https://github.com/lightningnetwork/lnd/blob/master/docs/release-notes/release-notes-0.16.3.md
