--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -35,7 +35,7 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  
+  A few days ago we discovered a performance issue when a remote scry publisher gets many simultaneous requests, as often happens during OTA updates. This performance bug caused the publisher to do 500x more work than necessary. We have now released vere-v2.9 to fix the issue.
 
 
   Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.9
