--- a/actualbudget/umbrel-app.yml
+++ b/actualbudget/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
-id: actualbudget
+id: actual
 category: Finance
-name: ActualBudget
+name: Actual
 version: "23.5.0"
 tagline: Envelope budgeting made easy
 description: >-
@@ -15,8 +15,8 @@ description: >-
 
   ⚠️ Important ⚠️
   When installing the application for the first time, a warning will appear. Click on "Advanced Options", tick the box and click "Open Actual".
-  This is because ActualBudget is served via HTTP. We recommend no opening more than one tab to avoid data loss risk.
-developer: ActualServer
+  This is because Actual is served via HTTP. We recommend no opening more than one tab to avoid data loss risk.
+developer: Actual
 website: https://actualbudget.com/
 dependencies: []
 repo: https://github.com/actualbudget/actual
