--- a/actualbudget/umbrel-app.yml
+++ b/actualbudget/umbrel-app.yml
@@ -19,7 +19,7 @@ description: >-
 developer: Actual
 website: https://actualbudget.com/
 dependencies: []
-repo: https://github.com/actualbudget/actual
+repo: https://github.com/actualbudget/actual-server
 support: https://actualbudget.github.io/docs/
 port: 5006
 gallery:
