--- a/snort/docker-compose.yml
+++ b/snort/docker-compose.yml
@@ -7,5 +7,5 @@ services:
       APP_PORT: 80
 
   web:
-    image: ghcr.io/v0l/snort:v0.1.8@sha256:ccc07d680cf2210873ac28c90a305de43777d968ce4b06c6824d26362bde9e67
+    image: git.v0l.io/kieran/snort:v0.1.10@sha256:06486c6d92206f585b9049237b42432fa27b2b1607f969356ca5d792077dcf26
     init: true
