Update mempool app description
Add mining dashboard, add gallery image, add
language note, and remove TV view.

--- a/mempool/umbrel-app.yml
+++ b/mempool/umbrel-app.yml
@@ -20,19 +20,19 @@ description: >-
 
   - Live transaction tracking
 
-  - Search any transaction, block or address
+  - Search any transaction, block, or address
 
   - Fee estimations
 
   - Mempool historical data
 
-  - TV View for larger displays as a TV in a cafe or bar
+  - Mining dashboard with key hashrate, difficulty, and reward metrics
 
   - View transaction scripts and op_return messages
 
   - Audio notifications on transaction confirmed and address balance change
 
-  - Multiple languages support
+  - Support for over 32 languages
 
   - Lightning explorer (when the Lightning Node app is installed)
 
@@ -55,6 +55,7 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
+  - 4.jpg
 path: ""
 defaultUsername: ""
 defaultPassword: ""
