--- a/nostream/umbrel-app.yml
+++ b/nostream/umbrel-app.yml
@@ -1,1 +1,36 @@
+manifestVersion: 1
+id: btc-rpc-explorer
+category: Explorers
+name: BTC RPC Explorer
+version: "3.3.0"
+tagline: Simple, database-free blockchain explorer
+description: >-
+  BTC RPC Explorer is a full-featured, self-hosted explorer for the
+  Bitcoin blockchain. With this explorer, you can explore not just the
+  blockchain database, but also explore the functional capabilities of your
+  Umbrel.
 
+  It comes with a network summary dashboard, detailed view of blocks, transactions, addresses, along with analysis tools for viewing stats on miner activity, mempool summary, with fee, size, and age breakdowns. You can also search by transaction ID, block hash/height, and addresses.
+
+  It's time to appreciate the "fullness" of your node.
+releaseNotes: >-
+  Dark mode is finally here! Easily switch between your preferred mode
+  in one click.
+
+  This version also includes lots of minor styling improvements, better
+  error handling, and several bugfixes.
+developer: Dan Janosik
+website: https://explorer.btc21.org
+dependencies:
+  - bitcoin
+  - electrs
+repo: https://github.com/janoside/btc-rpc-explorer
+support: https://github.com/janoside/btc-rpc-explorer/discussions
+port: 3002
+gallery:
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
+path: ""
+defaultUsername: ""
+defaultPassword: ""
