--- a/oak-node/umbrel-app.yml
+++ b/oak-node/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: oak-node
 category: Finance
 name: Oak Node
-version: "0.3.6"
+version: "0.3.7"
 tagline: Do more with your LND node
 description: >-
   Oak Node gives you Scheduled Sends. Use it to schedule recurring tips to LNURL or Lightning Addresses. 
@@ -10,9 +10,7 @@ description: >-
 
   For Nostriches out there, the included Nostr bot gives you control over your sats from any Nostr client.
 releaseNotes: >-
-  Ever wanted a fancier Nostr pubkey, but didn't want to mine it yourself?
-  Oak now has a PowPub Client, which lets you buy the mining of vanity pubkeys from mining providers.
-  It uses a split-key approach, so the keys are known only to you.
+  Added support for NIP-47 Nostr Wallet Connect, allowing you to connect Nostr apps to your LN node
 developer: Carlos
 website: https://oak-node.net
 dependencies:
